--- a/index.html
+++ b/index.html
@@ -6,16 +6,44 @@
     <link rel="alternate icon" type="image/x-icon" href="/snowflakefavicon.svg" />
     <link rel="apple-touch-icon" href="/snowflakefavicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Premium Christmas Santa Letter Page</title>
-    <meta name="description" content="Handcrafted premium Christmas designs, coloring pages, and personalized Santa letters for a magical holiday season" />
-    <meta property="og:title" content="Premium Christmas Santa Letter Page" />
-    <meta property="og:description" content="Handcrafted premium Christmas designs and personalized Santa letters" />
-    <meta property="og:image" content="https://bolt.new/static/og_default.png">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Premium Christmas Santa Letter Page" />
-    <meta name="twitter:description" content="Handcrafted premium Christmas designs and personalized Santa letters" />
-    <meta name="twitter:image" content="https://bolt.new/static/og_default.png">
-</head>
+
+    <title>Santa Letters & Christmas Notes | Printable Stationery & Coloring Sheets</title>
+    <meta
+      name="description"
+      content="14 Santa letters, 4 Christmas notes, and 10 free coloring pages – printable holiday stationery for kids, teachers, and families."
+    />
+
+    <!-- Open Graph -->
+    <meta
+      property="og:title"
+      content="Santa Letters & Christmas Notes | Printable Stationery & Coloring Sheets"
+    />
+    <meta
+      property="og:description"
+      content="14 Santa letters, 4 Christmas notes, and 10 free coloring pages – printable holiday stationery for kids, teachers, and families."
+    />
+    <meta
+      property="og:image"
+      content="https://christmasfun.store/christmasfun-og.jpg"
+    />
+    <meta property="og:url" content="https://christmasfun.store" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Santa Letters & Christmas Notes | Printable Stationery & Coloring Sheets"
+    />
+    <meta
+      name="twitter:description"
+      content="14 Santa letters, 4 Christmas notes, and 10 free coloring pages – printable holiday stationery for kids, teachers, and families."
+    />
+    <meta
+      name="twitter:image"
+      content="https://christmasfun.store/christmasfun-og.jpg"
+    />
+  </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
